--- a/tailwind.css
+++ b/tailwind.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Animation pour les transitions d'ajout et suppression */
+.task-item-enter {
+  opacity: 0;
+  transform: translateY(-10px);
+}
+
+.task-item-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.task-item-leave {
+  opacity: 1;
+}
+
+.task-item-leave-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
